# transcribe-audio

./: .commitlintrc.json  .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: conventional-commits.yml  release.yml
core/: transcriber.py  translator.py  writer.py
gui/: main_window.py  progress.py  worker.py
